--- a/templates/index/servicios.html.twig
+++ b/templates/index/servicios.html.twig
@@ -9,7 +9,7 @@
 
 <main>
     <section>
-        <div class="content-text">
+        <div class="content-text" style="margin-top: 2rem;">
             <h3 style="font-size:40px">Servicios</h3>
         </div>
         <div class="serviciosContexto">
