--- a/public/styles/Pags_Principal.css
+++ b/public/styles/Pags_Principal.css
@@ -7,7 +7,7 @@
     border-radius: 8px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
     text-align: center;
-    margin: 20px auto;
+    margin:auto;
 }
 .formularioCuerpo{
     /*margin-top: 30px;*/
@@ -22,6 +22,14 @@
     width: 100%;
     margin-top: 20px;
     
+}
+.back_btn {
+    background: rgb(139, 17, 17);
+    padding: 5px 15px;
+    margin: 5px;
+    border-radius: 5px;
+    color: white;
+    text-decoration: none;
 }
 
 input[type="text"], input[type="password"] {
