--- a/public/styles/client/carrito.css
+++ b/public/styles/client/carrito.css
@@ -39,3 +39,14 @@
     border-radius: 20px;
     margin: 10px 10px;
 }
+.imgs-carrito{
+    width: 50px;
+    height: 50px;
+    border-radius: 10px;
+    margin-right: 10px;
+}
+.contentItem{
+    background-color: #f09c28 !important;
+    border: #f09c28 !important;
+    box-shadow: 0 .125rem .25rem rgb(210 149 32 / 67%) !important;
+}
