--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -11,29 +11,42 @@
     display: flex;
     align-content: center;
     justify-content: center;
-    margin: auto 25px;
+    margin: auto;
 }
 
 .img_login {
     height: 420px;
-    width: 550px;
+    width: 700px;
     border-radius: 10px 0 0 10px;
+    box-shadow: 0 4px 12px rgb(0 0 0);
 }
 
 .login_form {
-    background: #ff873d;
+    background: #ff8f49;
     margin: auto 2.5rem;
     padding: 7rem 4rem;
     border-radius: 15px;
+    box-shadow: 0 4px 12px rgb(0 0 0);
 }
 
-.btn-login {
+
+.content-btn-login {
     padding: 15px;
     text-align: center;
 }
+.btn-login{
+    background: #984817;
+    border: none;
+    border-radius: 1.5rem;
+    padding: 10px 40px;
+}
+.btn-login:hover{
+    background: #8e5633 !important;
+    cursor: pointer;
+}
 
 .back_btn {
-    background: red;
+    background: rgb(139, 17, 17);
     padding: 5px 15px;
     margin: 5px;
     border-radius: 5px;
@@ -53,3 +66,24 @@
     flex-direction: column;
     justify-content: space-between;
 }
+.titulo{
+    font-size: 2rem;
+    color: white;
+    text-align: center;
+}
+.titulo-con-lineas {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    color: white;
+    padding: 20px 17rem;
+  }
+  
+  .titulo-con-lineas::before,
+  .titulo-con-lineas::after {
+    content: '';
+    flex: 1;
+    border-bottom: 4px solid white;
+    margin: 0 10px;
+  }
+  
