--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,7 +10,34 @@
         <link rel="stylesheet" href="{{ asset('styles/Principal.css') }}">
         <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glider-js@1.7.8/glider.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/907d8454bc.js" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/glider-js@1.7.8/glider.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>  
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+        <script src="{{ asset('js/bootstrap.bundle.min.js') }}"></script>
+        <script>
+            var select = document.querySelector('#options-type-select');
+            // Initialize Glide carousel
+            var glide = new Glide('.carrusel-list', {
+            type: select.value,
+            focusAt: 'center',
+            perView: 3
+            });
+
+            // Event listener for select change
+            select.addEventListener('change', function (event) {
+            // Update Glide carousel type based on select value
+            glide.update({
+                type: event.target.value
+            });
+            });
+
+            // Mount the Glide carousel
+            glide.mount();
+
+        </script>
         {% block stylesheets %}
         <style>
             .back_btn{
@@ -34,30 +61,6 @@
         {# {% endif %} #}
         {% block body %}{% endblock %}
     </body>
-        <script src="https://kit.fontawesome.com/907d8454bc.js" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/glider-js@1.7.8/glider.min.js"></script>
-        <script src="{{ asset('js/bootstrap.bundle.min.js') }}"></script>
-        <script src="{{ asset('js/bootstrap.min.js') }}"></script>
-        <script src="https://kit.fontawesome.com/907d8454bc.js" crossorigin="anonymous"></script>
-        <script>
-            var select = document.querySelector('#options-type-select');
-            // Initialize Glide carousel
-            var glide = new Glide('.carrusel-list', {
-            type: select.value,
-            focusAt: 'center',
-            perView: 3
-            });
-
-            // Event listener for select change
-            select.addEventListener('change', function (event) {
-            // Update Glide carousel type based on select value
-            glide.update({
-                type: event.target.value
-            });
-            });
-
-            // Mount the Glide carousel
-            glide.mount();
-
-        </script>
+    {% include 'components/footer.html.twig' %}
+        
 </html>
