--- a/templates/user/detcomida.html.twig
+++ b/templates/user/detcomida.html.twig
@@ -1,43 +1,60 @@
-{% extends 'base.html.twig' %}
+{# {% extends 'base.html.twig' %}
 
-{% block title %}Inicio{% endblock %}
  {% block stylesheets %}
- <link rel="stylesheet" href="{{ asset('styles/client/detcomida.css') }}">
-
+    <link rel="stylesheet" href="{{ asset('styles/client/detcomida.css') }}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@glidejs/glide@3.6.0/dist/css/glide.core.min.css">
  {% endblock %}
 {% block body %}
-{# <div class="btn-back-content" style="margin: 5px 0; ">
+<div class="btn-back-content" style="margin: 5px 0; ">
     <a class="back_btn" href="javascript:history.go(-1);" type="button">
         <i class="fa-solid fa-chevron-left"></i> Regresar
     </a>
-</div> #}
+</div>
 <form method="post">
 <main class="col-12">
-        <div class="img-container">
-            <img id="imgcomida" src="{{asset('imgs/MenuFotos/' ~ comida.Imagen)}}" alt="imagen de comida">
+    <div id="myCarousel" class="carousel slide img-container" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100" id="imgcomida" src="{{asset('imgs/MenuFotos/' ~ comida.Imagen)}}" alt="imagen de comida">
+            </div>
+            <div class="carousel-item">
+            <img class="d-block w-100" src="{{asset('imgs/MenuFotos/' ~ comida.Imagen)}}" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+            <img class="d-block w-100" src="{{asset('imgs/MenuFotos/' ~ comida.Imagen)}}" alt="Third slide">
+            </div>
         </div>
-        <div class="info-container">
-            <div class="title-container">
-                <h1 id="NomComida">{{comida.NomMenu}}</h1>
-            </div>
-            <div class="descr-content negocio">
-                <span class="span_detNe"> Negocio:</span> <p id="Negocio" style="font-size: x-large;">{{negocio.Negocio}}</p>
-            </div>
-            <div class="descr-content">
-                <p id="descp">{{comida.Descrip}}</p>
-            </div>
-            <div class="descr-content comid-content" id="ComiIncl">
-            </div>
-            
-            <div class="cost-content">
-                <h4 id="cost">${{comida.Precio}}MXN</h4>
-            </div>
-            <div>
-                <input id="MenuID" type="hidden" value= "{{ comida.id }}" name="MenuID"/>
-                <input id="cantidad" type="number" value = "1" class="form-control input_number" name="cantidad"/>
-            </div>
-            <div class="btn-container"><button id="btn" class="btn-buy" onclick="agregar()">Comprar</button></div>
+        <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+    <div class="info-container" style="padding-left: 4rem;">
+        <div class="title-container">
+            <h1 id="NomComida" style="padding-bottom:4rem">{{comida.NomMenu}}</h1>
         </div>
+        <div class="descr-content negocio">
+            <span class="span_detNe"> Negocio:</span> <p id="Negocio" style="font-size: x-large;">{{negocio.Negocio}}</p>
+        </div>
+        <div class="descr-content">
+            <p id="descp">{{comida.Descrip}}</p>
+        </div>
+        <div class="descr-content comid-content" id="ComiIncl">
+        </div>
+        
+        <div class="cost-content">
+            <h4 id="cost">${{comida.Precio}}MXN</h4>
+        </div>
+        <div>
+            <input id="MenuID" type="hidden" value= "{{ comida.id }}" name="MenuID"/>
+            <input id="cantidad" type="number" value = "1" class="form-control input_number" name="cantidad" min="1" max="99" />
+        </div>
+        <div class="btn-container"><button id="btn" class="btn-buy" onclick="agregar()">Comprar</button></div>
+    </div>
 </main>
 </form>
    <section class="py-2 bg-light">
@@ -74,6 +91,9 @@
         </section>
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide@3.6.0/dist/glide.min.js"></script>
+
 <script>
     var cantidad;
     var MenuID;
@@ -102,5 +122,84 @@
             }
         });
     }
+    $(document).ready(function () {
+    $('#myCarousel').on('slid.bs.carousel', function (e) {
+      
+    });
+  });
+
 </script>
+{% endblock %} #}
+
+{# Cambio a modal, intentos #}
+{% block stylesheets %}
+    <link rel="stylesheet" href="{{ asset('styles/client/detcomida.css') }}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@glidejs/glide@3.6.0/dist/css/glide.core.min.css">
 {% endblock %}
+
+<div class="modal fade" id="modalDetalleComida" tabindex="-1" role="dialog" aria-labelledby="modalDetalleComidaTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-dialog modal-xl" role="document">
+    <div class="modal-content">
+        <div class="modal-header">
+            <h5 class="modal-title" id="modalDetalleComidaTitle">Nombre de la comida </h5>
+            <input id="MenuID" type="hidden" value= "" name="MenuID"/>
+            <button type="button" class="btn-close text-reset" data-bs-dismiss="modal" aria-label="Close">
+            </button>
+        </div>
+        <div class="modal-body modal-body-detC" id="modalDetalleComidaBody">
+            <div>
+                <img src="https://media.istockphoto.com/id/1495039189/es/vector/sin-icono-de-foto-c%C3%A1mara-tachada-trazo-editable-estilo-de-l%C3%ADnea.jpg?s=612x612&w=0&k=20&c=lQz2Swo7c6dAaHHOjd89wi-NOdjbv1OyYskqsqhzt_E=" alt="imagen comida" class="img-fluid">
+            </div>
+            <div >
+                <span class="span_detNe"> Negocio:</span>
+                <hr>
+                Descripcion:
+                <p>Contenido del detalle de la comida...</p>
+                <p id="descp">Descripcion</p>
+            </div>
+        </div>
+        <div class="modal-footer">
+            <div style="display: flex; flex-direction: row; align-items: center;">
+                <span style="color: white;"> Cantidad: </span>
+                <input id="cantidad" type="number" value = "1" class="form-control input_number" name="cantidad" min="1" max="99" />
+            </div>
+            <button type="button" class="btn btn-secondary" id="btnAgregarSeguirC" onClick="addKeepBuying()">Agregar y seguir comprando</button>
+            <button type="button" class="btn btn-success" id="btnAgregar">Comprar $PrecioMXN</button>
+        </div>
+    </div>
+  </div>
+</div>
+<script>
+    
+function addKeepBuying() {
+    const cantidadInput = $('#cantidad').val();
+    const idInput = $('#MenuID').val();
+
+    // Validación simple
+    if (!cantidadInput || !idInput) {
+        alert('Faltan datos para agregar al carrito.');
+        return;
+    }
+    console.log('Cantidad:', cantidadInput, 'ID:', idInput);
+    $.ajax({
+        url: '{{ path("add_to_carrito") }}',
+        type: 'POST',
+        data: {
+            id: idInput,
+            cantidad: cantidadInput
+        },
+        success: function(response) {
+            console.log('Producto agregado al carrito:', response);
+            // Opcional: cerrar modal
+            $('#modalDetalleComida').modal('hide');
+            // Opcional: notificación de éxito
+            alert('Producto agregado al carrito exitosamente.');
+        },
+        error: function(xhr) {
+            console.error('Error al agregar al carrito:', xhr);
+            alert('Hubo un problema al agregar al carrito.');
+        }
+    });
+}
+</script>
