--- a/public/styles/Pags_Principal.css
+++ b/public/styles/Pags_Principal.css
@@ -24,7 +24,8 @@
     
 }
 .back_btn {
-    background: rgb(139, 17, 17);
+    background: #ff2929 ;
+    background: linear-gradient(90deg,rgba(255, 41, 41, 1) 50%, rgba(252, 69, 109, 1) 100%) ;
     padding: 5px 15px;
     margin: 5px;
     border-radius: 5px;
@@ -32,7 +33,7 @@
     text-decoration: none;
 }
 
-input[type="text"], input[type="password"] {
+.login_form input[type="text"], input[type="password"] {
     position: relative;
     height: 40px;
     width: 100%;
