--- a/public/styles/Principal.css
+++ b/public/styles/Principal.css
@@ -1,3 +1,39 @@
+@view-transition{
+    navigation: auto;
+
+}
+
+::view-transition-group(*){
+    animation-duration: 0.5s;
+}
+
+::view-transition-old(root){
+    animation: slide-out-to-left 0.5s forwards;
+}
+
+::view-transition-new(root){
+    animation: slide-in-from-right 0.5s forwards;
+}
+
+@keyframes slide-out-to-left {
+    from {
+        transform: translateX(0);
+    }
+    to {
+        transform: translateX(-100%);
+    }
+}
+
+@keyframes slide-in-from-right {
+    from {
+        transform: translateX(100%);
+    }
+    to {
+        transform: translateX(0);
+    }
+
+}
+
 *{
     font-family: "Poppins", sans-serif;
     padding: 0;
@@ -6,4 +42,7 @@
 
 body{
     background-color: #292828 !important;
+}
+btn-back-content{
+    
 }
