--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -106,7 +106,7 @@
         </section>
 
         <section id="nosotros" class="nosotros">
-            <div class="header">
+            <div class="content-text">
                 <h3 style="font-size:3rem">Nosotros</h3>
             </div> 
                 <div class="menu"> <!--IMAGENES 1-->
