--- a/templates/user/detcomida.html.twig
+++ b/templates/user/detcomida.html.twig
@@ -165,13 +165,12 @@
                 <input id="cantidad" type="number" value = "1" class="form-control input_number" name="cantidad" min="1" max="99" />
             </div>
             <button type="button" class="btn btn-secondary" id="btnAgregarSeguirC" onClick="addKeepBuying()">Agregar y seguir comprando</button>
-            <button type="button" class="btn btn-success" id="btnAgregar">Comprar $PrecioMXN</button>
+            <button type="button" class="btn btn-success" id="btnAgregar" onClick="DirectBuy()">Comprar $PrecioMXN</button>
         </div>
     </div>
   </div>
 </div>
 <script>
-    
 function addKeepBuying() {
     const cantidadInput = $('#cantidad').val();
     const idInput = $('#MenuID').val();
@@ -194,7 +193,37 @@ function addKeepBuying() {
             // Opcional: cerrar modal
             $('#modalDetalleComida').modal('hide');
             // Opcional: notificación de éxito
-            alert('Producto agregado al carrito exitosamente.');
+        },
+        error: function(xhr) {
+            console.error('Error al agregar al carrito:', xhr);
+            alert('Hubo un problema al agregar al carrito.');
+        }
+    });
+}
+function DirectBuy(){
+    const cantidadInput = $('#cantidad').val();
+    const idInput = $('#MenuID').val();
+
+    const directBuy = true;
+    // Validación simple
+    if (!cantidadInput || !idInput) {
+        alert('Faltan datos para agregar al carrito.');
+        return;
+    }
+    console.log('Cantidad:', cantidadInput, 'ID:', idInput);
+    $.ajax({
+        url: '{{ path("add_to_carrito") }}',
+        type: 'POST',
+        data: {
+            id: idInput,
+            cantidad: cantidadInput,
+            directBuy: directBuy
+        },
+        success: function(response) {
+            if(response.success && response.redirect){
+                // Redirige a la URL especificada
+                window.location.href = response.redirect;
+            }
         },
         error: function(xhr) {
             console.error('Error al agregar al carrito:', xhr);
