--- a/templates/auth/login.html.twig
+++ b/templates/auth/login.html.twig
@@ -47,4 +47,9 @@
         </div>
     </form>
     </section>
+    <script>
+    $(document).ready(function () {
+        $('.form-login').css('opacity', '1');
+    });
+</script>
 {% endblock %}
