--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -6,7 +6,7 @@
 
  {% endblock %}
 {% block body %}
-{% include 'user/detcomida.html.twig' %}
+{% include 'components/Modals/ModalComida.html.twig' %}
 
     <section id="inicio" class="content"> 
         <div class="content-text">
@@ -17,7 +17,7 @@
         </div>
     </section>
 <main class="main">
-    <div class="header">
+    <div class="content-header">
         <section id="categoria">
             <div class="content-text">
                 <h3>Categoría</h3>
