--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -10,15 +10,18 @@ body{
 }
 .header {
     /* Gradiente más vibrante para el header */
-    background: linear-gradient(90deg, #ff5500 0%, #ff7300 35%, #ffb347 65%, #ff8c00 100%);
+    background: linear-gradient(90deg, #ff5500 0%, #ff7300 35%, #ffac39 65%, #ff8c00 100%);
     padding: 2px 0;
     box-shadow: 0 4px 15px rgba(255, 115, 0, 0.3);
+}
+nav{
+    width: 100%;
 }
 .nav-container {
     max-width: 1200px;
     margin: 0 auto;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     padding: 0 20px;
 }
