--- a/templates/user/carrito.html.twig
+++ b/templates/user/carrito.html.twig
@@ -20,7 +20,7 @@
             </div>
     </div>
 </div>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script>
 $(document).ready(function() {
     // Cargar el contenido del carrito al abrir el offcanvas
@@ -73,6 +73,7 @@ $(document).ready(function() {
                 total += producto.precio * producto.cantidad;
             });
             $('#total').text('$' + total + ' MXN');
+            $('#btnCompra').prop('disabled', false);
 
         },
         error: function(xhr, status, error) {
